<resources>
    <string name="app_name">Ussd</string>
    <string name="pakets">Paketlar</string>
    <string name="minutes">Daqiqa</string>
    <string name="sms">SMS</string>
    <string name="internet">Internet</string>
    <string name="reklama">Reklama</string>
    <string name="aboutUs">Biz haqimizda</string>
    <string name="tariffs">Tariflar</string>
    <string name="ussdCode">Tekshiruv kodlar</string>
    <string name="services">Xizmatlar</string>
    <string name="chooseProvider">Operatorni tanlang</string>
    <string name="check_balance">Balansni\ntekshirish</string>
    <string name="check_packages">Paket\nqoldiqlari</string>
    <string name="news">Yangiliklar</string>
    <string name="tariffPalan">Tariff rejasi</string>
    <string name="changePrice">"O'tkazish narxi: "</string>
    <string name="goTariff">"Ushbu tarif rejasiga  o'tish"</string>
    <string name="abonamentLimits">Abonament limit</string>
    <string name="outLimitsPrice">Limitdan tashqari narxlar</string>
    <string name="tariffConditions">"Tarifga o'tish shartlari"</string>
    <string name="theme">Tungi rejim</string>
    <string name="promotions">Aksiyalar</string>
    <string name="info">Info</string>
    <string name="settingsUz">Sozlamalar</string>
    <string name="settingsRu">настройки</string>
    <string name="language">Ilova tili</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>