<FrameLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include
        layout="@layout/layout_header"
        />


    <androidx.core.widget.NestedScrollView
        android:layout_marginTop="68dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardViewTariff"
                android:layout_width="match_parent"
                android:layout_height="96dp"
                app:cardCornerRadius="16dp"
                app:cardBackgroundColor="#000000"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="16dp"
                >

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imageViewTariff"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#88000000"/>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    >
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/textViewTariffName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:fontFamily="@font/bold"
                        android:textSize="16dp"
                        android:layout_gravity="center_horizontal"
                        android:textColor="#FFFFFF"

                        />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/textView2"
                        android:layout_marginTop="4dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:fontFamily="@font/regular"
                        android:textSize="16dp"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/tariffPalan"
                        android:textColor="#FFFFFF"

                        />


                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:cardBackgroundColor="@color/themeColorNormal"
                android:layout_marginHorizontal="16dp"
                app:cardCornerRadius="16dp"

                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_gravity="center_horizontal">


                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textColor="#93949B"
                            android:layout_margin="16dp"
                            android:textSize="12dp"
                            android:text="@string/changePrice"
                            />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/textViewOnPrice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity=""
                            android:layout_marginTop="16dp"
                            android:layout_marginEnd="16dp"
                            android:layout_marginRight="16dp"
                            android:gravity="center_vertical"
                            android:textColor="#19181F"
                            android:textSize="12dp"

                            />



                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_gravity="center_horizontal">


                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textColor="#93949B"
                            android:layout_margin="16dp"
                            android:textSize="12dp"
                            android:text="@string/changePrice"
                            />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/textViewPrice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity=""
                            android:layout_marginTop="16dp"
                            android:layout_marginEnd="16dp"
                            android:layout_marginRight="16dp"
                            android:gravity="center_vertical"
                            android:textColor="#19181F"
                            android:textSize="12dp"

                            />



                    </LinearLayout>

                </LinearLayout>


            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardViewChangeTariff"
                android:layout_width="wrap_content"
                android:layout_height="46dp"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="16dp"
                android:layout_gravity="center"
                >
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_margin="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_gravity="center"
                    android:textColor="#19181F"
                    android:text="@string/goTariff"

                    />

            </com.google.android.material.card.MaterialCardView>


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/abonamentLimits"
                android:textColor="#19181F"
                android:textSize="16sp"
                />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardViewLimits"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="16dp"
                app:cardCornerRadius="16dp"
                app:cardBackgroundColor="@color/themeColorNormal">

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginVertical="8dp"
                    android:id="@+id/recyclerViewLimits"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.card.MaterialCardView>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/outLimitsPrice"
                android:textColor="#19181F"
                android:textSize="16sp"
                />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardViewOutLimits"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="16dp"
                app:cardCornerRadius="16dp"
                app:cardBackgroundColor="@color/themeColorNormal">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewOvertLimits"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginVertical="8dp" />
            </com.google.android.material.card.MaterialCardView>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tariffConditions"
                android:textColor="#19181F"
                android:textSize="16sp"
                />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:cardCornerRadius="16dp"
                android:padding="16dp"
                app:cardBackgroundColor="@color/themeColorNormal">
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textViewTariffDescription"
                    android:layout_width="match_parent"
                    android:padding="16dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="#93949B"
                    android:textSize="14sp"
                    android:text="t is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like)."

                    />


            </com.google.android.material.card.MaterialCardView>



        </LinearLayout>


    </androidx.core.widget.NestedScrollView>


</FrameLayout>
